Added missing package descriptions

--- a/als-structure/js/package.json
+++ b/als-structure/js/package.json
@@ -1,7 +1,7 @@
 {
   "name": "als-structure",
   "version": "1.0.0",
-  "description": "",
+  "description": "ALS Structure",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
