--- a/als-common/js/package.json
+++ b/als-common/js/package.json
@@ -1,7 +1,7 @@
 {
   "name": "als-common",
   "version": "1.0.0",
-  "description": "",
+  "description": "ALS Common",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
