--- a/als-node-client/node-package/package.json
+++ b/als-node-client/node-package/package.json
@@ -15,8 +15,8 @@
     "als": "./dist/als-node-client.min.js"
   },
   "dependencies": {
-    "@aml-org/amf-custom-validator": "0.1.0-SNAPSHOT.31",
-    "@aml-org/amf-custom-validator-web": "0.1.0-SNAPSHOT.31",
+    "@aml-org/amf-custom-validator": "1.0.0",
+    "@aml-org/amf-custom-validator-web": "1.0.0",
     "ajv": "6.12.6",
     "vscode-jsonrpc": "6.0.0",
     "vscode-languageserver-protocol": "3.16.0"
