ALS-1690: fix api20 hover and add test for oas3 hover

--- a/als-actions/shared/src/test/resources/actions/hover/async-api20-full-result.yaml
+++ b/als-actions/shared/src/test/resources/actions/hover/async-api20-full-result.yaml
@@ -465,9 +465,9 @@ hovers:
   (126,10):
     - Defines a data type
   (127,12):
-    - Defines a data type
+    - Scalar range constraining this scalar shape
   (127,19):
-    - Defines a data type
+    - Scalar range constraining this scalar shape
   (128,14):
     - Defines a data type
   (128,25):
